# Modelo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MERGE_PLAN.md  README.md  project.yml  verify_implementation.py
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: config.yml  feature-idea.yml
Modelo/: ContentView.swift  ModeloApp.swift  Theme.swift  ThemePalette.swift
ModeloTests/: AgentsLoaderTests.swift  ArtifactParserTests.swift  BenchmarkTests.swift  ChatSessionStoreTests.swift  ChatSessionTests.swift  CompactionTests.swift  ConversationBranchingTests.swift  ConversationExporterTests.swift  ConversationGroupingTests.swift  ConversationTests.swift  EndpointTests.swift  FilesystemToolsTests.swift  FirecrawlClientTests.swift  FirecrawlToolsTests.swift  KeychainStoreTests.swift  LMStudioClientTests.swift  MacmonTests.swift  MetricsRollupTests.swift  OpenRouterCatalogTests.swift  PresetTests.swift  PrometheusScrapeTests.swift  ReachabilityMonitorTests.swift  ReportCalculatorTests.swift  SSELineParserTests.swift  SamplingParamsTests.swift  ServerMonitorTests.swift  ServerRegistryTests.swift  SlashParserTests.swift  SmokeTests.swift  StubURLProtocol.swift  TokenEstimatorTests.swift  ToolCallParserTests.swift  ToolRegistryTests.swift  ToolSelectorTests.swift  ToolTypeTests.swift  UsageMathTests.swift  UsageRetentionTests.swift
design-reference/: AppStore.swift  ContentView.swift  INTEGRATION.md  ModeloApp.swift  Theme.swift
modelo-tap/: Cargo.toml  README.md
modelo-tap/src/: main.rs
(+104 files in other folders)
